--- a/Space is a dangerous place/Space is a dangerous place.csproj
+++ b/Space is a dangerous place/Space is a dangerous place.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Game1.cs" />
     <Compile Include="GameStartController.cs" />
     <Compile Include="ICollidable.cs" />
+    <Compile Include="MenuController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -66,6 +67,7 @@
     <Compile Include="SpaceshipController.cs" />
     <Compile Include="Terrain.cs" />
     <Compile Include="TerrainController.cs" />
+    <Compile Include="Titan.cs" />
     <Compile Include="Ufo.cs" />
     <Compile Include="UfoAmmoDrop.cs" />
     <Compile Include="UfoBombDrop.cs" />
