--- a/Space is a dangerous place/app.config
+++ b/Space is a dangerous place/app.config
@@ -10,6 +10,9 @@
             <setting name="Highscore" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="Name" serializeAs="String">
+                <value />
+            </setting>
         </Space_is_a_dangerous_place.Properties.Settings>
     </userSettings>
 </configuration>
