--- a/Space is a dangerous place/Properties/Settings.settings
+++ b/Space is a dangerous place/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="Highscore" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="Name" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
